# llm.sycl

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
data/: .gitignore  compare.py  prepro_tinyshakespeare.py  prepro_tinystories.py  profile_gpt2cu.py  readme.md  train_gpt2.py
deploy/leonardo/: compile.sh  deploy.sh  install_packages.sh  readme.md  setenv.sh
profiling/: .gitignore  gather_metrics1.py  ncu.profile.to.csv.sh  parse_ncu_csv.py  plot.py  prepare_csv.py  process.csv.py  process_csv2.py  process_vtune_csv_brief.py  readme.md  unified_profile_to_csv.sh  vtune.profile.to.csv.sh
profiling/helpers/: gather_metrics1.py  parse_ncu_csv.py  process_vtune_csv_brief.py
src/: CMakeLists.txt  main.cpp  readme.md
src/common/: CMakeLists.txt  common.cpp  common.h  readme.md  timer.h
src/core/: CMakeLists.txt  Tensor.cpp  Tensor.h  tensor.cpp  tensor.h
src/kernels/: Attention.cpp  Attention.h  BaseKernel.cpp  BaseKernel.h  CMakeLists.txt  Encoder.cpp  Encoder.h  Gelu.cpp  Gelu.h  Helpers.cpp  Helpers.h  LayerNorm.cpp  LayerNorm.h  MatmulBias.cpp  MatmulBias.h  Norm.cpp  Norm.h  Permute.cpp  Permute.h  Residual.cpp  Residual.h  Softmax.BAK1.h  Softmax.cpp  Softmax.h  Unpermute.cpp  Unpermute.h  readme.md
src/layers/: Attention.h  BaseLayer.cpp  BaseLayer.h  CMakeLists.txt  MatmulBias.h
src/model/: CMakeLists.txt
src/model/gpt2_v1/: DataLoader.cpp  DataLoader.h  Model.cpp  Model.h
src/orig/: CMakeLists.txt  buf_to_npy.h  readme.md  test_gpt2_fp32.cu  train_gpt2_fp32.cu
test/: CMakeLists.txt  testAll.cpp
test/test-sycl/: CMakeLists.txt  TestVecAdd.cpp
test/unittests/: testCommon.h  testKernelEncode.cpp  testKernelLayerNorm.cpp  testKernelMatmulBias.cpp  testKernelSoftmax.cpp  testOneMkl.cpp  testTensor.cpp
