add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(model)
add_subdirectory(kernels)
add_subdirectory(orig)

add_executable(LLM_SYCL main.cpp)
target_compile_options(LLM_SYCL PRIVATE ${BASE_FLAGS})
target_link_options(LLM_SYCL PRIVATE ${BASE_LINKER_FLAGS})
target_link_libraries(LLM_SYCL argparse common core)